// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<More /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={true}
      logout={[Function]}
      user={
        Object {
          "firstName": "John",
          "lastName": "Appleseed",
        }
      }
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <BackBar
            right={null}
          >
            <div />
          </BackBar>
          <Headline
            style={
              Object {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="navigation.welcome_message"
          >
            <h1
              className="css-18cwfw7 headline theme__headline"
              data-test-id="Headline"
              style={
                Object {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="navigation.welcome_message"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  navigation.welcome_message
                </span>
              </Translate>
            </h1>
          </Headline>
          <Portal
            name="nav-menu.content.before"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <UserMenu
            entries={null}
            isLoggedIn={true}
            logout={[Function]}
            user={
              Object {
                "firstName": "John",
                "lastName": "Appleseed",
              }
            }
          >
            <Portal
              name="user-menu.container.before"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            >
              <LoggedIn
                logout={[Function]}
              >
                <SurroundPortals
                  portalName="nav-menu.my-account"
                  portalProps={
                    Object {
                      "Item": [Function],
                    }
                  }
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Section
                      title="navigation.your_account"
                    >
                      <Headline
                        style={
                          Object {
                            "margin": "24px 20px 16px",
                          }
                        }
                        tag="h2"
                        text="navigation.your_account"
                      >
                        <h2
                          className="css-18cwfw7 headline theme__headline"
                          data-test-id="Headline"
                          style={
                            Object {
                              "margin": "24px 20px 16px",
                            }
                          }
                        >
                          <Translate
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={Object {}}
                            role={null}
                            string="navigation.your_account"
                            transform={null}
                          >
                            <span
                              className={null}
                              role={null}
                            >
                              navigation.your_account
                            </span>
                          </Translate>
                        </h2>
                      </Headline>
                      <div
                        className={
                          Object {
                            "data-css-13ch7sr": "",
                          }
                        }
                      >
                        <SurroundPortals
                          portalName="nav-menu.logout"
                          portalProps={
                            Object {
                              "Item": [Function],
                            }
                          }
                        >
                          <MoreMenuItem
                            className={null}
                            href={null}
                            label="navigation.logout"
                            onClick={[Function]}
                            testId="logoutButton"
                          >
                            <button
                              className="css-1hj8a57"
                              data-test-id="logoutButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Text
                                string="navigation.logout"
                              >
                                navigation.logout
                              </Text>
                            </button>
                          </MoreMenuItem>
                        </SurroundPortals>
                      </div>
                    </Section>
                  </div>
                </SurroundPortals>
              </LoggedIn>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
          </UserMenu>
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    Object {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="css-18cwfw7 headline theme__headline"
                    data-test-id="Headline"
                    style={
                      Object {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={Object {}}
                      role={null}
                      string="navigation.store_information"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        navigation.store_information
                      </span>
                    </Translate>
                  </h2>
                </Headline>
                <div
                  className={
                    Object {
                      "data-css-13ch7sr": "",
                    }
                  }
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/shipping"
                        >
                          <Text
                            string="navigation.shipping"
                          >
                            navigation.shipping
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/payment"
                        >
                          <Text
                            string="navigation.payment"
                          >
                            navigation.payment
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/terms"
                        >
                          <Text
                            string="navigation.terms"
                          >
                            navigation.terms
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/privacy"
                        >
                          <Text
                            string="navigation.privacy"
                          >
                            navigation.privacy
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/imprint"
                        >
                          <Text
                            string="navigation.about"
                          >
                            navigation.about
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <Portal
            name="nav-menu.content.after"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;

exports[`<More /> should render as expected when the user is not logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={false}
      logout={[Function]}
      user={null}
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <BackBar
            right={null}
          >
            <div />
          </BackBar>
          <Headline
            style={
              Object {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="login.headline"
          >
            <h1
              className="css-18cwfw7 headline theme__headline"
              data-test-id="Headline"
              style={
                Object {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="login.headline"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  login.headline
                </span>
              </Translate>
            </h1>
          </Headline>
          <UserMenu
            entries={null}
            isLoggedIn={false}
            logout={[Function]}
            user={null}
          >
            <Portal
              name="user-menu.container.before"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            >
              <Connect(LoggedOut)>
                <LoggedOut
                  dispatch={[Function]}
                  isDisabled={false}
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Grid
                      className="css-az18cj theme__more-page__user-menu__container"
                    >
                      <Grid.Item
                        className="css-mzzsxh theme__more-page__login-button__container"
                      >
                        <Link
                          disabled={false}
                          href="/login"
                        >
                          <Button
                            className="css-6f03lb theme__more-page__login-button"
                            disabled={false}
                            testId="UserMenuLogin"
                            type="secondary"
                          >
                            <Text
                              string="login.button"
                            >
                              login.button
                            </Text>
                          </Button>
                        </Link>
                      </Grid.Item>
                      <Grid.Item
                        className="css-mzzsxh theme__more-page-register-button__container"
                      >
                        <Link
                          disabled={false}
                          href="/register"
                        >
                          <Button
                            className="css-6f03lb theme__more-page-register-button"
                            disabled={false}
                            testId="UserMenuRegister"
                            type="secondary"
                          >
                            <Text
                              string="login.signup"
                            >
                              login.signup
                            </Text>
                          </Button>
                        </Link>
                      </Grid.Item>
                    </Grid>
                  </div>
                </LoggedOut>
              </Connect(LoggedOut)>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
          </UserMenu>
          <Portal
            name="nav-menu.content.before"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    Object {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="css-18cwfw7 headline theme__headline"
                    data-test-id="Headline"
                    style={
                      Object {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={Object {}}
                      role={null}
                      string="navigation.store_information"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        navigation.store_information
                      </span>
                    </Translate>
                  </h2>
                </Headline>
                <div
                  className={
                    Object {
                      "data-css-13ch7sr": "",
                    }
                  }
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/shipping"
                        >
                          <Text
                            string="navigation.shipping"
                          >
                            navigation.shipping
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/payment"
                        >
                          <Text
                            string="navigation.payment"
                          >
                            navigation.payment
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/terms"
                        >
                          <Text
                            string="navigation.terms"
                          >
                            navigation.terms
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/privacy"
                        >
                          <Text
                            string="navigation.privacy"
                          >
                            navigation.privacy
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="css-1hj8a57"
                          href="/page/imprint"
                        >
                          <Text
                            string="navigation.about"
                          >
                            navigation.about
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <Portal
            name="nav-menu.content.after"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;
